# langchain-pdf

./: .gitignore  README.md  app.py  requirements.txt
chat-pdf/: app.py  htmlformat.py
docs-agents/: .env.example  README.md  cliente.py  pyproject.toml  requirements.txt  serve.py
docs-agents/notebook/: LangChain-practice.ipynb
