[tool.poetry]
name = "docs-agents"
version = "0.1.0"
description = ""
authors = ["Don <manumancuso05@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain-core = "0.1.46"
langchain-community = "0.0.34"
langserve = {extras = ["all"], version = "^0.2.2"}
langsmith = "0.1.51"
langchain-openai = "0.1.4"
beautifulsoup4 = "4.12.3"
faiss-cpu = "1.8.0"
langchainhub = "0.1.15"
python-dotenv = "1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
